tests/failing/2-too_many_args_closure/main.rgo
int: @int
exit: @exit

bar: (ok:()){
    ok()
}
foo: (x: int, y: int) {
    exit(0)
}
main: () {
    bar(foo(1, 2, 3))
}
